ega/wip: Introduce EGA acceleration model.
EGA stands for "Everything Graphically Accelerated".

[todo: add full explaination here]

--- a/configure.ac
+++ b/configure.ac
@@ -419,6 +419,18 @@ if test "x$UXA" != "xno"; then
 	UXA=yes
 fi
 
+AC_ARG_ENABLE(ega,
+	      AS_HELP_STRING([--enable-ega],
+			     [Enable Everything Graphically Accelerated (EGA) [default=auto]]),
+	      [EGA="$enableval"],
+	      [EGA=auto])
+
+if test "x$EGA" != "xno"; then
+	AC_DEFINE(USE_EGA, 1, [Enable EGA support])
+	required_pixman_version=0.24
+	RGA=yes
+fi
+
 PKG_CHECK_MODULES(XORG, [xorg-server >= $required_xorg_server_version xproto fontsproto damageproto pixman-1 >= $required_pixman_version $REQUIRED_MODULES])
 ABI_VERSION=`$PKG_CONFIG --variable=abi_videodrv xorg-server`
 XSERVER_VERSION=`$PKG_CONFIG --modversion xorg-server`
@@ -645,6 +657,10 @@ AC_MSG_CHECKING([whether to include SNA support])
 AM_CONDITIONAL(SNA, test "x$SNA" != "xno")
 AC_MSG_RESULT([$SNA])
 
+AC_MSG_CHECKING([whether to include EGA support])
+AM_CONDITIONAL(EGA, test "x$EGA" != "xno")
+AC_MSG_RESULT([$EGA])
+
 if test "$XVMC" = "yes"; then
 	PKG_CHECK_MODULES(XVMCLIB, [xvmc dri2proto x11 x11-xcb xcb-dri2 xcb-aux libdrm_intel], [], [XVMC="no"])
 fi
@@ -661,7 +677,7 @@ fi
 
 AC_ARG_WITH(default-accel,
 	    AS_HELP_STRING([--with-default-accel],
-			   [Select the default acceleration method out of none, sna, or uxa  [default is sna if enabled, otherwise uxa]]),
+			   [Select the default acceleration method out of none, sna, ega, or uxa  [default is sna if enabled, otherwise uxa]]),
 			   [accel="$withval"],
 			   [accel="auto"])
 if test "x$accel" = "xyes"; then
@@ -676,6 +692,10 @@ if test "x$accel" = "xauto"; then
 	else
 		if test "x$UXA" != "xno"; then
 			accel="uxa"
+		fi
+
+		if test "x$EGA" != "xno"; then
+			accel="ega"
 		fi
 	fi
 	if test "x$accel" = "xauto" -a "x$KMS" = "xyes"; then
@@ -816,7 +836,7 @@ AC_DEFINE_DIR([LIBEXEC_PATH], libexecdir, [libexec directory])
 AC_CONFIG_FILES([
                 Makefile
                 man/Makefile
-		libobj/Makefile
+                libobj/Makefile
                 src/Makefile
                 src/legacy/Makefile
                 src/legacy/i810/Makefile
@@ -826,6 +846,7 @@ AC_CONFIG_FILES([
                 src/sna/brw/Makefile
                 src/sna/fb/Makefile
                 src/uxa/Makefile
+                src/ega/Makefile
                 xvmc/Makefile
                 xvmc/shader/Makefile
                 xvmc/shader/mc/Makefile
@@ -866,6 +887,20 @@ if test "x$UXA" != "xno"; then
 		accel_msg="$accel_msg *uxa"
 	else
 		accel_msg="$accel_msg uxa"
+	fi
+fi
+if test "x$EGA" != "xno"; then
+	if test "x$UXA" = "xno"; then
+		if test "$accel" = "none"; then
+			accel_msg="$accel_msg *none"
+		else
+			accel_msg="$accel_msg none"
+		fi
+	fi
+	if test "$accel" = "ega"; then
+		accel_msg="$accel_msg *ega"
+	else
+		accel_msg="$accel_msg ega"
 	fi
 fi
 
