Add a new debugging option.
Will be used to try and fight the "BLT copy suddenly limits your FPS to 60 in a fullscreen application" issue

v2: Fix compile errors in sna_glyphs.c

--- a/src/meson.build
+++ b/src/meson.build
@@ -78,6 +78,9 @@ endif
 if debug == 'pixmap' or debug == 'full'
   config.set('DEBUG_PIXMAP', 1)
 endif
+if debug == 'logging'
+  config.set('HAS_DEBUG_LOGGING', 1)
+endif
 if debug == 'full'
   config.set('HAS_DEBUG_FULL', 1)
 endif
