ega: Another batch of changes.
EGA is still broken from unimplemented functions and doesn't work.
See you in 12 years.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
 		"stdio.h": "c",
 		"ega_cpu_arch.h": "c",
 		"stdbool.h": "c",
-		"ega_helpers.h": "c"
+		"ega_helpers.h": "c",
+		"format": "c"
 	}
 }
