sna: Rewrite the asynchronous page flip code.
Previously, we would fix it by falling back to synchronous flips, this was great in concept, bad in execution.

I have no clue what Xorg was cooking but it would do some questionable things and introduce intermittent display delay
when doing fallback, on top of being limited to your display's refresh rate when falling back.

The new code fixes both issues, by simply refusing (for now) to scanout directly LINEAR buffers asynchronously.

Luckily it seems that gets SNA to use the BLT engine to do the conversion for free.

Future work:
- Try to get sna_pixmap_change_tiling to play nice
- Figure out what to do at high resolutions/refresh rates, where the BLT engine is likely not able to keep up.

Fixes: d94fbdc233a63ab06ee8b7efacc7079c8d6b75cc ("sna: Initial asynchronous page-flip fixes")
Fixes: cde075c111cffe5f0ca5610a7cfd2b6ee3fea718 ("sna: asynchronous page-flip fixes")
Fixes: 39ccf08e1cd534fcee0b3ce946a6a7227b0a4a33 ("sna: asynchronous page-flip fixes (part 2)")

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
 		"ega_cpu_arch.h": "c",
 		"stdbool.h": "c",
 		"ega_helpers.h": "c",
-		"format": "c"
+		"format": "c",
+		"ranges": "c",
+		"valarray": "c"
 	}
 }
