meson.build: fix missing Xv dependencies
libXv needs be be explicitly linked, otherwise getting error:

  FAILED: xvmc/libIntelXvMC.so.1.0.0
  cc  -o xvmc/libIntelXvMC.so.1.0.0 xvmc/libIntelXvMC.so.1.0.0.p/intel_xvmc.c.o xvmc/libIntelXvMC.so.1.0.0.p/intel_xvmc_dump.c.o xvmc/libIntelXvMC.so.1.0.0.p/i915_xvmc.c.o xvmc/libIntelXvMC.so.1.0.0.p/i965_xvmc.c.o xvmc/libIntelXvMC.so.1.0.0.p/xvmc_vld.c.o xvmc/libIntelXvMC.so.1.0.0.p/intel_batchbuffer.c.o -Wl,--as-needed -Wl,--no-undefined -shared -fPIC -Wl,--start-group -Wl,-soname,libIntelXvMC.so.1 -pthread /usr/lib/x86_64-linux-gnu/libX11.so /usr/lib/x86_64-linux-gnu/libXvMC.so /usr/lib/x86_64-linux-gnu/libX11-xcb.so /usr/lib/x86_64-linux-gnu/libxcb.so /usr/lib/x86_64-linux-gnu/libxcb-util.so /usr/lib/x86_64-linux-gnu/libxcb-dri2.so /usr/lib/x86_64-linux-gnu/libdrm_intel.so /usr/lib/x86_64-linux-gnu/libdrm.so -Wl,--end-group
  /usr/bin/ld: xvmc/libIntelXvMC.so.1.0.0.p/intel_xvmc.c.o: in function `XvMCCreateSurface':
  /home/nekrad/src/xorg/drivers/xf86-video-intel/_build/../xvmc/intel_xvmc.c:432: undefined reference to `XvCreateImage'
  /usr/bin/ld: xvmc/libIntelXvMC.so.1.0.0.p/intel_xvmc.c.o: in function `XvMCPutSurface':
  /home/nekrad/src/xorg/drivers/xf86-video-intel/_build/../xvmc/intel_xvmc.c:666: undefined reference to `XvPutImage'
  collect2: error: ld returned 1 exit status

Signed-off-by: Enrico Weigelt, metux IT consult <info@metux.net>

--- a/src/legacy/i810/xvmc/meson.build
+++ b/src/legacy/i810/xvmc/meson.build
@@ -4,6 +4,7 @@ shared_library('I810XvMC',
 	       sources : 'I810XvMC.c',
 	       dependencies : [
 		 dependency('x11', required : true),
+		 dependency('xv', required : true),
 		 dependency('xvmc', required : true),
 		 dependency('xorg-server', required : true),
 		 dependency('libdrm', required : true),
