--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,27 @@
 		"format": "c",
 		"ranges": "c",
 		"valarray": "c",
-		"__locale": "c"
+		"__locale": "c",
+		"intel.h": "c",
+		"charconv": "c",
+		"chrono": "c",
+		"optional": "c",
+		"ratio": "c",
+		"system_error": "c",
+		"array": "c",
+		"functional": "c",
+		"tuple": "c",
+		"type_traits": "c",
+		"utility": "c",
+		"__bit_reference": "c",
+		"__node_handle": "c",
+		"bitset": "c",
+		"deque": "c",
+		"limits": "c",
+		"locale": "c",
+		"vector": "c",
+		"uxa-priv.h": "c",
+		"cstdlib": "c",
+		"intel_uxa.h": "c"
 	}
 }
