meson: Add dependency on xv
Symbols such as XvCreateImage, XvPutImage, XvGetPortAttribute come from
libXv.so. Linking to this dependency directly fixes build errors on
Debian Bookworm against xserver 21.1.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/meson.build
+++ b/meson.build
@@ -157,6 +157,7 @@ endif
 
 with_xvmc = get_option('xvmc')
 if with_xvmc
+  dependency('xv', required : true)
   dependency('xvmc', required : true)
   dependency('dri2proto', required : true)
   dependency('x11', required : true)
