meson: Add dependency on xv
Symbols such as XvCreateImage, XvPutImage, XvGetPortAttribute come from
libXv.so. Linking to this dependency directly fixes build errors on
Debian Bookworm against xserver 21.1.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Authored-by: Povilas Kanapickas <povilas@radix.lt>

--- a/src/legacy/i810/xvmc/meson.build
+++ b/src/legacy/i810/xvmc/meson.build
@@ -3,6 +3,7 @@ shared_library('I810XvMC',
 	       version : '1.0.0',
 	       sources : 'I810XvMC.c',
 	       dependencies : [
+		 dependency('xv', required : true),
 		 dependency('x11', required : true),
 		 dependency('xv', required : true),
 		 dependency('xvmc', required : true),
