--- a/xvmc/meson.build
+++ b/xvmc/meson.build
@@ -15,6 +15,7 @@ shared_library('IntelXvMC',
 		 dependency('threads', required : true),
 		 dependency('x11', required : true),
 		 dependency('xv', required : true),
+		 dependency('xv', required : true),
 		 dependency('xvmc', required : true),
 		 dependency('xorg-server', required : true),
 		 dependency('x11-xcb', required : true),
