--- a/configure.ac
+++ b/configure.ac
@@ -352,9 +352,9 @@ AC_ARG_ENABLE(kms,
               [KMS="yes"])
 AC_ARG_ENABLE(ums,
 	      AS_HELP_STRING([--enable-ums],
-			     [Assume UMS support [[default=auto]]]),
+			     [Assume UMS support [[default=no]]]),
               [UMS="$enableval"],
-              [UMS="auto"])
+              [UMS="no"])
 
 AC_ARG_ENABLE(kms-only,
 	      AS_HELP_STRING([--enable-kms-only],
