--- a/meson_options.txt
+++ b/meson_options.txt
@@ -6,8 +6,8 @@ option('ega', type : 'boolean', value : false,
        description : 'Build with EGA support (experimental)')
 option('xaa', type : 'boolean', value : true,
        description : 'Build with XAA support')
-option('ums', type : 'boolean', value : true,
-       description : 'Build with UMS support')
+option('ums', type : 'boolean', value : false,
+       description : 'Build with UMS support (deprecated)')
 option('kms', type : 'boolean', value : true,
        description : 'Build with KMS support')
 option('dri1', type : 'boolean', value : true,
