--- a/meson_options.txt
+++ b/meson_options.txt
@@ -34,6 +34,8 @@ option('tearfree', type : 'boolean', value : false,
        description : 'Enable use of TearFree by default')
 option('use-create2', type : 'boolean', value : false,
        description : 'Enable use of create2 ioctl (experimental)')
+option('mesa-amber', type : 'boolean', value : false,
+       description : 'Enable compatibility with the legacy Amber drivers.')
 option('async-swap', type : 'boolean', value : false,
        description : 'Enable use of asynchronous swaps (experimental)')
 option('internal-debug', type : 'combo', value : 'no', choices : [ 'no', 'sync', 'memory', 'pixmap', 'full' ],
