make: Build for KMS platforms only by default.
UMS is dead since Linux 6.7 and there is no point in building something that doesn't work anymore.

--- a/configure.ac
+++ b/configure.ac
@@ -352,15 +352,15 @@ AC_ARG_ENABLE(kms,
               [KMS="yes"])
 AC_ARG_ENABLE(ums,
 	      AS_HELP_STRING([--enable-ums],
-			     [Assume UMS support [[default=auto]]]),
+			     [Assume UMS support [[default=no]]]),
               [UMS="$enableval"],
-              [UMS="auto"])
+              [UMS="no"])
 
 AC_ARG_ENABLE(kms-only,
 	      AS_HELP_STRING([--enable-kms-only],
-			     [Only assume KMS support (no UMS) [[default=no]]]),
+			     [Only assume KMS support (no UMS) [[default=yes]]]),
               [ONLY_KMS="$enableval"],
-              [ONLY_KMS="no"])
+              [ONLY_KMS="yes"])
 
 AC_ARG_ENABLE(ums-only,
 	      AS_HELP_STRING([--enable-ums-only],
