--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,6 +2,8 @@ option('sna', type : 'boolean', value : true,
        description : 'Build with SNA support')
 option('uxa', type : 'boolean', value : true,
        description : 'Build with UXA support')
+option('ega', type : 'boolean', value : false,
+       description : 'Build with EGA support')
 option('ums', type : 'boolean', value : false,
        description : 'Build with UMS support (disabled by default)')
 option('kms', type : 'boolean', value : true,
