ega: Update Makefile.

--- a/src/ega/Makefile.am
+++ b/src/ega/Makefile.am
@@ -18,7 +18,7 @@
 #  IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 #  CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-AM_CFLAGS = $(DIX_CFLAGS) $(XORG_CFLAGS) $(LIBDRM_CFLAGS) $(UDEV_CFLAGS) $(CWARNFLAGS)
+AM_CFLAGS = $(DIX_CFLAGS) $(XORG_CFLAGS) $(DRM_CFLAGS) $(DRMINTEL_CFLAGS) $(UDEV_CFLAGS) $(CWARNFLAGS)
 
 AM_CPPFLAGS = \
 	$(XORG_INCS) \
@@ -26,7 +26,7 @@ AM_CPPFLAGS = \
 	$(NULL)
 
 noinst_LTLIBRARIES = libega.la
-libega_la_LIBADD = $(UDEV_LIBS) $(DRM_LIBS)
+libega_la_LIBADD = $(UDEV_LIBS) $(DRMINTEL_LIBS) $(DRM_LIBS)
 libega_la_ladir = @moduledir@/drivers
 
 libega_la_SOURCES = \
