--- a/src/ega/glamor/Makefile.am
+++ b/src/ega/glamor/Makefile.am
@@ -49,7 +49,7 @@ libglamor_la_SOURCES = \
 	glamor_sync.c \
 	glamor.h
 
-if XV
+if XVMC
 libglamor_la_SOURCES += \
 	glamor_xv.c
 endif
@@ -58,5 +58,3 @@ libglamor_egl_stubs_la_SOURCES = \
 	glamor_egl_stubs.c \
 	glamor_egl_ext.h \
 	glamor_egl.h
-
-sdk_HEADERS = glamor.h
