--- a/src/ega/Makefile.am
+++ b/src/ega/Makefile.am
@@ -18,6 +18,7 @@
 #  IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 #  CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
+SUBDIRS = 
 AM_CFLAGS = $(DIX_CFLAGS) $(XORG_CFLAGS) $(DRM_CFLAGS) $(DRMINTEL_CFLAGS) $(UDEV_CFLAGS) $(CWARNFLAGS)
 
 AM_CPPFLAGS = \
@@ -29,7 +30,16 @@ noinst_LTLIBRARIES = libega.la
 libega_la_LIBADD = $(UDEV_LIBS) $(DRMINTEL_LIBS) $(DRM_LIBS)
 libega_la_ladir = @moduledir@/drivers
 
+SUBDIRS += glamor
+libega_la_LIBADD += glamor/libglamor.la
+
+SUBDIRS += glamor_xv
+libega_la_LIBADD += glamor_xv/libglamoregl.la
+
 libega_la_SOURCES = \
+	 ega_module.h \
+	 ms_compat.c \
+	 ms_compat.h \
 	 driver.c \
 	 driver.h \
 	 drmmode_display.c \
